<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <TextView
            android:id="@+id/greeting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="14dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/logout"
            app:layout_constraintEnd_toEndOf="@id/like"
            app:layout_constraintTop_toTopOf="@+id/userBar"
            android:contentDescription="@string/logout"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_weight="0"
            android:background="#FAFAFA"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/_logout"
            app:tint="#575757"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userBar"
            android:contentDescription="@string/likebutton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0"
            android:background="#FAFAFA"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_heart_svgrepo_com"
            app:tint="#ad0000"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_weight="0"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/iniciar_registrarse"
            android:textColor="#FF2626"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userBar"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/userBar"
        app:layout_constraintBottom_toTopOf="@id/scrollDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_height="1dp"
        android:alpha="0.6"
        android:background="@android:color/darker_gray"/>

    <ScrollView
        android:id="@+id/scrollDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userBar"
>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/border"
                android:contentDescription="@string/ProductSeeing"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="Tempest X1000 200 X 200 Exposing sample"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImage" />

            <TextView
                android:id="@+id/productDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/detailsSample"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characteristics_separator" />

            <View
                android:id="@+id/characteristics_separator"
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characteristics" />

            <TextView
                android:id="@+id/characteristics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="bottom"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="0dp"
                android:text="@string/caracteristicas"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/price_and_fav"

                />
            <LinearLayout
                android:id="@+id/price_and_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productName"
>

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="323,24€"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:layout_gravity="center"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="15dp">

                    <ToggleButton
                        android:id="@+id/likeButton"
                        style="@android:style/Widget.Material.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"

                        android:layout_marginBottom="10dp"
                        android:backgroundTint="#F0E7FF"
                        android:drawableStart="@drawable/favorite_button_icon"
                        android:drawablePadding="10dp"
                        android:fontFamily="sans-serif-medium"

                        android:text="@string/Favorites"
                        android:textColor="#000000"
                        android:textOff="@string/Favorites"
                        android:textOn="@string/Favorites"
                        android:textSize="18sp" />
                </FrameLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>